fixed spacing and font size of the faq's, all thats left is when all the other elements are putin, to fix the alignment of the blocks

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,6 +51,7 @@
 
 .faq-text{
 	font-size: 17px;
+	line-height: 24px;
 }
 
 .timeline-title{
